Fix DatabaseSearcherWithBibFiles tests